Bug 60040 - Crash after undoing master page application
Summary: Crash after undoing master page application
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords:
: 60061 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-29 21:56 UTC by Ruslan Kabatsayev
Modified: 2014-04-29 18:54 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Backtrace (3.64 KB, text/plain)
2013-01-29 21:56 UTC, Ruslan Kabatsayev
Details
Backtrace from second way of reproducing (7.44 KB, text/x-log)
2013-10-06 10:13 UTC, Ruslan Kabatsayev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ruslan Kabatsayev 2013-01-29 21:56:22 UTC
Created attachment 73881 [details]
Backtrace

How to reproduce:
0. Create a new presentation
1. Add second slide
2. Apply some master page from Tasks pane, wait until it fully applies and updates thumbnails
3. Ctrl+Z
4. Right click on the slide -> crash

This might be related to bug 57240, but I'm not sure.
This also reproduces with 3.6.5.0+
Comment 1 Thomas van der Meulen [retired] 2013-01-30 07:09:59 UTC
I can't Reporduce the bug running LO 4.0.0.2 on mac os x 10.6.8 or windows 7
BUT wen i did step 3. (ctrl+z) and then step 2 (choice an onther tamplate) it crasht. so is this your bug? 
plz replay
Comment 2 Ruslan Kabatsayev 2013-01-30 08:25:36 UTC
(In reply to comment #1)
> I can't Reporduce the bug running LO 4.0.0.2 on mac os x 10.6.8 or windows 7
> BUT wen i did step 3. (ctrl+z) and then step 2 (choice an onther tamplate)
> it crasht. so is this your bug? 
> plz replay

Well, I can reproduce both crashes, and they have different backtraces. So, I think these are separate bugs.
It's strange that you can't reproduce in Windows, because I easily reproduce it in Wine with Version 4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0).
Maybe you first tried right-clicking thumbnail. In this case I also can't reproduce this bug. Looks like it clears error condition.
So, step 4 should mean right click _the_slide_ itself, not thumbnail, only in this case you come across the crash.
Comment 3 QA Administrators 2013-09-24 01:54:48 UTC
Dear Bug Submitter,

This bug has been in NEEDINFO status with no change for at least 6 months. Please provide the requested information as soon as possible and mark the bug as UNCONFIRMED. Due to regular bug tracker maintenance, if the bug is still in NEEDINFO status with no change in 30 days the QA team will close the bug as INVALID due to lack of needed information.

For more information about our NEEDINFO policy please read the wiki located here: 
https://wiki.documentfoundation.org/QA/FDO/NEEDINFO

If you have already provided the requested information, please mark the bug as UNCONFIRMED so that the QA team knows that the bug is ready to be confirmed.


Thank you for helping us make LibreOffice even better for everyone!


Warm Regards,
QA Team
Comment 4 Ruslan Kabatsayev 2013-10-06 10:13:48 UTC
Created attachment 87176 [details]
Backtrace from second way of reproducing

Still both problems in comment #0 and comment #1 are reproducible with 4.1.2.3.0+.
Comment 5 Ruslan Kabatsayev 2013-10-11 21:12:43 UTC
In fact I've answered comment #1 a while ago, so this should no longer have NEEDINFO status.
Comment 6 Marco Menardi 2014-01-05 20:04:24 UTC
Can't reproduce the problem in comment 0 (original post) but I can the one in comment 1, and affects all version I've tested 4.2rc1 included.
In short:
How to reproduce:
0. Create a new presentation
1. Add second slide
2. Apply some master page from Tasks pane, wait until it fully applies and updates thumbnails
3. Ctrl+Z
4. Apply another master page -> crash.

I've tried to bibisect but I stepped into another bug in between that crashed libo as soon as I applied the master page the first time!
Anyway the bibisect result has been:

marco@bibisect:~/bibisect40$ git bisect good 
There are only 'skip'ped commits left to test. 
The first bad commit could be any of:  06a6822e92ee6461d42b4bea6e4b4dfbb813c483  6de24deffc1b023c47eee69005b72d986752c949  94990f9d5413fdf8d498dfe2364900a4638fd057  b3d0d6cf5ddad3c3642ec069bcc2946f7f4b2853  fb0ce84a03588593a081ac3a26b2ada2d960b76c  5cec9e21c2a7ccf772046a19234d065b40753526  7434444e727dae62d5752fce3bc7e652f6fb9630  874c746f2771abce8304b81680ab7b7d2246596e  eb20dad6eb31147462ef7b7139ae54bba139102f  380f36bb9a212febecabb7176a8170d94078f2e9  c351d72548ef0ca30ec0d3672bd514caaa497a99  3dd564c99651edb7fc45bea4afec8e98f7a8aa19  d9be4b56c2e61bb94c677582dc92419f8468a927  bad59399d244121ae0c3f105b51bc66378750cad  df022a841cf6429cb6e6ccc2036df43aa4f5e9a6  b3713b7e6bccaa3c07695a358f2667f877d007d9  dda5f411582f8cab90cb3f9abc456fdadb972afb  322dea02e8867272a756e7430e689699d2216aad  897cb6dda02ae841cd1831e132de2aba7821a601  6d6e5252d2c81fa930cb89f3eaf0efadf09cb87f  971746fd36818460b8a85a28b87a480808635f79 35ca9b06a975f17f839694045475bba5e6032e99 3b7edde7e7ccbcc6ed53323f6b9f16c08034a966 b6b2de656808a8c0e0db05b6eb43237e4861bbd6 d51fc64c5993aab4a267af8b9425b2b24c2cd3ce 6091cff9527caea089e10f9bea3d3226e396b2c6 9e3bd4e558acee891a50025bc77d00bd87e3898d 257170782cf70dfa39e7219ecc8e13270e511ba4 5478f58adef21d3378257c60396d29a8653bafd3 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
We cannot bisect more!
Comment 7 Commit Notification 2014-04-24 16:17:43 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f756fb84a1629d455ccbd7af1f3975ac307fb957

Resolves: fdo#60040 crash after undoing master page application



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2014-04-24 16:21:43 UTC
*** Bug 60061 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2014-04-24 18:47:05 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a33a20fe4ed4078794c07f0b506355999119882&h=libreoffice-4-2

Resolves: fdo#60040 crash after undoing master page application


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-04-29 18:54:16 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a94870445dea1bdd269d675386bbc836139eaeb7&h=libreoffice-4-2-4

Resolves: fdo#60040 crash after undoing master page application


It will be available already in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.