Resolves: fdo#60040 crash after undoing master page application

regression since 839cb94a2bd9dfadb6a7e11a97f0540a78f79b6b

Change-Id: Ie7068ecd1655ecae169948dc1e08330dc4200bf9